# pentos

./: .gitignore  CHANGELOG.en.md  CHANGELOG.md  COMMANDS.en.md  COMMANDS.md  LICENSE  README.bl.md  README.en.md  README.md  ROADMAP.en.md  ROADMAP.md  config.example.yaml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
pentos/: __init__.py  ai.py  config.py  credmatch.py  db.py  diff.py  export.py  findings_rules.py  graph.py  knowledge.py  mcp_server.py  models.py  obsidian.py  playbooks.py  rag.py  recommend.py  report.py  repository.py  workspace.py
pentos/cli/: __init__.py  app.py
pentos/importers/: __init__.py  nmap.py  scanners.py
pentos/playbooks/: ad.yaml  linux-privesc.yaml  web.yaml  windows-privesc.yaml
pentos/runners/: __init__.py  base.py  parsers.py  registry.py
pentos/tui/: __init__.py  app.py  data.py
pentos/web/: __init__.py  server.py
pentos/web/static/: app.js  index.html  style.css
tests/: test_ai.py  test_ai_advisor.py  test_cli_fixes.py  test_cli_graph.py  test_credmatch.py  test_enum4linux_parser.py  test_evidence_reports.py  test_export.py  test_learning_report.py  test_mcp_server.py  test_nuclei_parser.py  test_recommend_shortcuts.py  test_scan_diff.py  test_scanner_import.py  test_status_history.py  test_templates.py  test_tui.py  test_web_dashboard.py  test_web_interactive.py
tests/fixtures/: enum4linux_auth_dc.txt  enum4linux_auth_dc_full.txt  scan_burp.xml  scan_nessus.nessus  scan_openvas.xml
