[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pentos"
version = "2.18.0+runner"
description = "PentOS – Knowledge-Driven Offensive Security Workspace"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2.6",
    "PyYAML>=6",
    "requests>=2.31",
]

[project.optional-dependencies]
pdf = ["reportlab>=4.0"]

[project.scripts]
pentos = "pentos.cli.app:app"

[tool.setuptools]
packages = ["pentos", "pentos.cli", "pentos.importers", "pentos.runners"]

[tool.setuptools.package-data]
pentos = ["playbooks/*.yaml"]

