[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pentos"
version = "2.25.2"
description = "PentOS – Knowledge-Driven Offensive Security Workspace"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2.6",
    "PyYAML>=6",
    "requests>=2.31",
]

[project.optional-dependencies]
pdf = ["reportlab>=4.0"]
web = ["fastapi>=0.110", "uvicorn>=0.27"]
mcp = ["mcp>=1.0"]
tui = ["textual>=0.60"]

[project.scripts]
pentos = "pentos.cli.app:app"

[tool.setuptools]
packages = ["pentos", "pentos.cli", "pentos.importers", "pentos.runners", "pentos.web", "pentos.tui"]

[tool.setuptools.package-data]
pentos = ["playbooks/*.yaml"]
"pentos.web" = ["static/*"]

